# claude-glm-actions-lab-sandbox

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  calculator.html  counter.html  dice-app.html  omikuji.html  package.json  pomodoro-timer.html  pyproject.toml  release-notes-v1.1.0.md  release-notes-v1.1.6-test-responder-fix.md  timer-app.html  todo-app.html
.claude/rules/: doc-translator.md  reviewer.md
.github/: release-notes-v0.0.1-test.md
.github/agents/: release-note-generator.md
.github/scripts/: create-pr.py  generate-header.py  merge-agent.py
.github/templates/: pr-comment.md
.github/workflows/: CLAUDE_GLM_DEV.yml  auto-release-notes.yml  claude-glm-responder.yml  pr-auto-comment.yml
example/app01/: hello.py
example/app02/: index.ts
example/app04/: ugly.ts
example/app05/: index.ts  main.ts  models.ts
example/app08/: README.md  index.html  script.js  style.css
example/app09/: README.md  README_JA.md  index.html  script.js  style.css
example/app10/: index.html  script.js  style.css
hello_app/: README.md  README_JA.md  __main__.py  feature.txt
src/: index.ts
tests/: test_hello_app.py
